<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:title="@string/preference_notification_category">
        <SwitchPreference
            android:defaultValue="true"
            android:key="checkBoxVibrate"
            android:title="@string/checkbox_vibrate"/>
        <RingtonePreference
            android:showDefault="true"
            android:key="NotificationSound"
            android:title="@string/checkbox_sound"
            android:defaultValue="content://settings/system/notification_sound"
            android:ringtoneType="notification" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="checkBoxLED"
            android:title="@string/checkbox_LED"/>
        <SwitchPreference
            android:key="checkBoxOngoing"
            android:title="@string/checkbox_ongoing"
            android:summary="@string/ongoing_detail"/>
        <SwitchPreference
            android:key="checkBoxMarkAsDone"
            android:title="@string/mark_as_done"
            android:summary="@string/mark_as_done_detail"/>
        <SwitchPreference
            android:key="checkBoxSnooze"
            android:title="@string/snooze"
            android:summary="@string/snooze_detail"/>
        <SwitchPreference
            android:key="checkBoxNagging"
            android:title="@string/nagging_reminder"
            android:summary="@string/nagging_detail"/>
        <com.fatkhun.agriculture.mvp.data.dialogs.PreferenceNagTimePicker
            android:key="nagInterval"
            android:title="@string/nagging_interval"/>
    </PreferenceCategory>
</PreferenceScreen>