<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_item_data"
        android:checked="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="Home" />
    <item
        android:id="@+id/nav_item_history"
        android:checked="true"
        android:icon="@drawable/ic_info_24px"
        android:title="@string/history" />
    <item
        android:id="@+id/nav_item_watering"
        android:checked="true"
        android:icon="@drawable/ic_star"
        android:title="@string/watering" />
    <item
        android:id="@+id/nav_item_reminder"
        android:checked="true"
        android:icon="@drawable/ic_notifications_black_empty"
        android:title="@string/reminder" />
</menu>